# mseq_hardware

./: .gitignore  Cargo.toml  Embed.toml  Makefile  README.md  init.gdb  memory.x
.cargo/: config.toml
src/: debug.rs  lib.rs  main.rs  midi.rs
