[package]
name = "mseq_hardware"
version = "0.1.0"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411"] }
# Loger & Formating 
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }
# Minimal RTOS
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
# TODO add a monotonic if you use scheduling
rtic-monotonics = { version = "2.0.3", features = [ "cortex-m-systick" ]}
# LCD screen
lcd-lcm1602-i2c = "0.3.0"
# Allocator
embedded-alloc = "0.6.0"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 2
overflow-checks = false

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
